--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 RC1
-- fix Alcatel problems
-- fix FFOS v1.2 and v1.3
-- fix ask for non secure connection
+- feature: download video and progress bar
+- feature: download audio and progress bar
+- feature: async storage photo open
+- feature: async storage video open
+- feature: async storage audio open
+- fix more multimedia formats
+- fix contact wait problem
+- fix USA international/national format contacts
+- fix amount of memory to use
+- fix auto scroll images
+- fix preload image before to send
+- fix quality of hi resolution images
+- fix create new group
